button spacing fix 3????

--- a/join/index.html
+++ b/join/index.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="block-heading" style="margin-top: -43px;"><img data-aos="fade" data-aos-duration="850" src="/assets/img/61072811_10158062997343561_7260407403730960384_o.jpeg" style="width: 100%;padding-bottom: 50px;">
                     <p style="font-size: 16.5px;margin-bottom: 2%;">We are always looking for new members and sponsors! If you are interested in supporting our team, contact us via social media or email fsae@columbia.edu! If you want to join the team, click the button below and subscribe to our mailing list at the bottom of this page!</p>
-                    <button class="btn btn-outline-dark text-black-50" style="margin-top: 10px" type="button" onclick="window.location.href = 'https://cufr.atlassian.net/wiki/spaces/CW/pages/7045300/New+Members';"><a class="" href="https://cufr.atlassian.net/wiki/spaces/CW/pages/7045300/New+Members" style="color: rgba(0,0,0,1);opacity: 1;">New Member Instructions</a></button>
+                    <button class="btn btn-outline-dark text-black-50" type="button" onclick="window.location.href = 'https://cufr.atlassian.net/wiki/spaces/CW/pages/7045300/New+Members';"><a class="" href="https://cufr.atlassian.net/wiki/spaces/CW/pages/7045300/New+Members" style="color: rgba(0,0,0,1);opacity: 1;">New Member Instructions</a></button>
                     <p style = "margin-top: 20px" style="font-size: 16.5px;">Visit us:&nbsp;</p>
 		    <p>- We are located in the basement of Mudd at 500 W 120th St, New York, NY 10027</p>
                     <p>- Go to Mudd, take the stairs to the basement</p>
