updated social media icons and links

--- a/join/index.html
+++ b/join/index.html
@@ -12,7 +12,8 @@
     <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/css/fontawesome.css">
+    <link rel="stylesheet" href="assets/fonts/css/brands.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
@@ -103,9 +104,9 @@
 	    </section>
     </main>
     <footer class="page-footer dark" style="padding-bottom: 3px;">
-        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px; width: 40%"><a class="border-dark social-link" href="https://www.facebook.com/ColumbiaFSAE/" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a></a><a class="border-dark social-link"
-                href="https://www.instagram.com/columbia_fsae/?igshid=svjts1w844oy" style="margin: 0px 5px;"><i class="fa fa-instagram social-link-icon"></i><a class="border-dark social-link" href="https://twitter.com/ColumbiaFSAE?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" style="margin: 0px 5px;">
-        <i class="fa fa-twitter social-link-icon"></i></a>
+        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px; width: 40%"><a class="border-dark social-link" href="https://www.facebook.com/ColumbiaFSAE/" target="_blank" style="margin: 0px 5px;"><i class="fa-brands fa-facebook social-link-icon"></i></a></a><a class="border-dark social-link"
+                href="https://www.instagram.com/columbia_fsae/?igshid=svjts1w844oy" target="_blank" style="margin: 0px 5px;"><i class="fa-brands fa-instagram social-link-icon"></i><a class="border-dark social-link" href="https://www.tiktok.com/@columbiafsae" target="_blank" style="margin: 0px 5px;">
+        <i class="fa-brands fa-tiktok social-link-icon"></i></a>
         </a></div>
         <div class="footer-copyright">
             <p>© 2022 Copyright Columbia University FSAE</p>
