--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html>
 
-    
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>About Us - CUFR</title>
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="../assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="../assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="../assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="../assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="../assets/img/fsae-logo-white-22.png">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="assets/fonts/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/fonts/css/brands.css">
+    <link rel="stylesheet" href="../assets/fonts/css/fontawesome.css">
+    <link rel="stylesheet" href="../assets/fonts/css/brands.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous">
-    <link rel="stylesheet" href="/assets/css/Dark-footer-with-social-media-icons.css">
+    <link rel="stylesheet" href="../assets/css/Dark-footer-with-social-media-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="/assets/css/smoothproducts.css">
-    <link rel="stylesheet" href="/assets/css/Social-Icon--hover-effect.css">
+    <link rel="stylesheet" href="../assets/css/smoothproducts.css">
+    <link rel="stylesheet" href="../assets/css/Social-Icon--hover-effect.css">
    
    <style>
    .row-header-wrapper {
@@ -455,16 +454,17 @@
                 href="https://www.instagram.com/columbia_fsae/?igshid=svjts1w844oy" target="_blank" style="margin: 0px 5px;"><i class="fa-brands fa-instagram social-link-icon"></i><a class="border-dark social-link" href="https://www.tiktok.com/@columbiafsae" target="_blank" style="margin: 0px 5px;">
         <i class="fa-brands fa-tiktok social-link-icon"></i></a>
         </a></div>
+    
         <div class="footer-copyright">
             <p>© 2022 Copyright Columbia University FSAE</p>
         </div>
     </footer>
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
-    <script src="/assets/js/smoothproducts.min.js"></script>
-    <script src="/assets/js/theme.js"></script>
-    <script src="/assets/js/bs-animation.js"></script>
+    <script src="../assets/js/smoothproducts.min.js"></script>
+    <script src="../assets/js/theme.js"></script>
+    <script src="../assets/js/bs-animation.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
 </body>
 
