--- a/join/index.html
+++ b/join/index.html
@@ -4,25 +4,25 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Join - CUFR</title>
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white-22.png">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <title>About Us - CUFR</title>
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="../assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="../assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="../assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="../assets/img/fsae-logo-white-22.png">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="../assets/img/fsae-logo-white-22.png">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="assets/fonts/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/fonts/css/brands.css">
+    <link rel="stylesheet" href="../assets/fonts/css/fontawesome.css">
+    <link rel="stylesheet" href="../assets/fonts/css/brands.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous">
-    <link rel="stylesheet" href="/assets/css/Dark-footer-with-social-media-icons.css">
+    <link rel="stylesheet" href="../assets/css/Dark-footer-with-social-media-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="/assets/css/smoothproducts.css">
-    <link rel="stylesheet" href="/assets/css/Social-Icon--hover-effect.css">
+    <link rel="stylesheet" href="../assets/css/smoothproducts.css">
+    <link rel="stylesheet" href="../assets/css/Social-Icon--hover-effect.css">
     <link rel="stylesheet" href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" type="text/css">
 </head>
 
