updated rules to point to pdf

--- a/cars/index.html
+++ b/cars/index.html
@@ -126,7 +126,7 @@
             <li class="nav-item" role="presentation">
               <a
                 class="nav-link active"
-                href="http://fsae.engineering.columbia.edu/FSAE_Rules_2021_V1.html"
+                href="/assets/pdf/FSAE_Rules_2024_V1.pdf"
                 style="color: #e1e1e1"
                 >RULES</a
               >
