--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ t<!DOCTYPE html>
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="/" style="color: #e1e1e1;">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="http://fsae.engineering.columbia.edu/FSAE_Rules_2021_V1.html" style="color: #e1e1e1;">RULES</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="/assets/pdf/FSAE_Rules_2024_V1.pdf" style="color: #e1e1e1;">RULES</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/join/" style="color: #e1e1e1;">JOIN</a></li>
