Added louise headshot

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -263,9 +263,9 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Allyce.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Louise_Goldenberg.jpg">
                             <div class="card-body info">
-                                <h4 class="card-title">Allyce Chung</h4>
+                                <h4 class="card-title">Louise Goldenberg</h4>
                                 <p class="card-text">Social Chair</p>
                             </div>
                         </div>
