Update securepay links

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -53,9 +53,9 @@
                     <br></br>
                     <p> If you would like to donate to CUFR as a friend, alumnus, or sponsor, please use the following Columbia Secure Pay Links!</p>
                     <hr style="visibility:hidden;" />
-                    <a href="https://securepay.cuit.columbia.edu/dashboard/manage/forms/detail/211/" class="btn btn-primary">Family, Friends, Alumni Contributions</a>
+                    <a href="https://securepay.cuit.columbia.edu/payment/pub/cufr-family&friends/" class="btn btn-primary">Family, Friends, Alumni Contributions</a>
                     <br></br>
-                    <a href="https://securepay.cuit.columbia.edu/dashboard/manage/forms/detail/212/" class="btn btn-primary">Sponsor Contributions</a>
+                    <a href="https://securepay.cuit.columbia.edu/payment/pub/cufr-company-sponsor/" class="btn btn-primary">Sponsor Contributions</a>
                     <br></br>
                     <p>If you are interested in becoming a CUFR sponsor, please contact our team at <b>fsae@columbia.edu.</b></p>
                 </div>
