--- a/about-us/index.html
+++ b/about-us/index.html
@@ -200,9 +200,9 @@
                         </div>
                     </div> 
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Jaz_Beasley.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Jazmyn Beasley</h4>
+                                <h4 class="card-title">Position Vacant</h4>
                                 <p class="card-text">Controls Chief</p>
                             </div>
                         </div>
