updated eboard member list

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -140,25 +140,25 @@
                 <section></section>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Mert_Saygi.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Calvin_Moon.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Mert Saygi</h4>
+                                <h4 class="card-title">Calvin Moon</h4>
                                 <p class="card-text">President</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Vedhas_Banaji.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Godwill_Agbehonou.jpg">
                             <div class="card-body info">
-                                <h4 class="card-title">Vedhas Banaji</h4>
+                                <h4 class="card-title">Godwill Agbehonou</h4>
                                 <p class="card-text">Vice President of Technical Operations</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Alex_Polzak.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Grace.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Alex Polzak</h4>
+                                <h4 class="card-title">Grace Zhang</h4>
                                 <p class="card-text">Vice President of Business Affairs</p>
                             </div>
                         </div>
@@ -166,25 +166,33 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Alex_Deli-Ivanov.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Nika.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Alex Deli-Ivanov</h4>
+                                <h4 class="card-title">Nika Zamyatina</h4>
                                 <p class="card-text">Chief Mechanical Engineer</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Matthew_Modi.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Rosnel_Leyva-Cortes.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Matthew Modi</h4>
+                                <h4 class="card-title">Rosnel Leyva-Cortes</h4>
                                 <p class="card-text">Chief Electrical Engineer</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Steven.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Nika Zamyatina</h4>
+                                <h4 class="card-title">Steven Tian</h4>
+                                <p class="card-text">Chief Manufacturing Engineer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Karime.png">
+                            <div class="card-body info">
+                                <h4 class="card-title">Karime Meija</h4>
                                 <p class="card-text">Vehicle Dynamics Chief</p>
                             </div>
                         </div>
@@ -192,25 +200,25 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Fabio_Nunez_Del_Prado.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/JP.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Fabio Nunez Del Prado</h4>
+                                <h4 class="card-title">John Paul Salvatore</h4>
                                 <p class="card-text">Powertrain Chief</p>
                             </div>
                         </div>
                     </div> 
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/profile.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Aileen.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Position Vacant</h4>
+                                <h4 class="card-title">Aileen Liu</h4>
                                 <p class="card-text">Controls Chief</p>
                             </div>
                         </div>
                     </div> 
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Rosnel_Leyva-Cortes.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Hadley.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Rosnel Leyva-Cortes</h4>
+                                <h4 class="card-title">Hadley Pade</h4>
                                 <p class="card-text">High Voltage Chief</p>
                             </div>
                         </div>
@@ -218,25 +226,25 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Godwill_Agbehonou.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Lizzie.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Godwill Agbehonou</h4>
+                                <h4 class="card-title">Lizzie Scott</h4>
                                 <p class="card-text">Low Voltage Chief</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Calvin_Moon.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/William.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Calvin Moon</h4>
+                                <h4 class="card-title">William Ostling</h4>
                                 <p class="card-text">Frame/Body/Aero Chief</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Tameem_Asif.jpeg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Nikaia.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Tameem Asif</h4>
+                                <h4 class="card-title">Nikaia He</h4>
                                 <p class="card-text">Electrical Engineering Treasurer</p>
                             </div>
                         </div>
@@ -247,9 +255,9 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Karime_Mejia.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/EVA.png">
                             <div class="card-body info">
-                                <h4 class="card-title">Karime Mejia</h4>
+                                <h4 class="card-title">Eva Sharman</h4>
                                 <p class="card-text">Mechanical Engineering Treasurer</p>
                             </div>
                         </div>
