semi fixed proportions

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -140,7 +140,7 @@
                 <section></section>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Calvin_Moon.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height500px; max-width:1100px" src="/assets/img/headshots/Calvin_Moon.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Calvin Moon</h4>
                                 <p class="card-text">President</p>
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Godwill_Agbehonou.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block"style="height500px; max-width:1100px" src="/assets/img/headshots/Godwill_Agbehonou.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Godwill Agbehonou</h4>
                                 <p class="card-text">Vice President of Technical Operations</p>
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Grace.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height: 500px; max-width:1100px" src="/assets/img/headshots/grace 3.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Grace Zhang</h4>
                                 <p class="card-text">Vice President of Business Affairs</p>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Nika.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height:500px; max-width:1100px" src="/assets/img/headshots/Nika.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Nika Zamyatina</h4>
                                 <p class="card-text">Chief Mechanical Engineer</p>
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Rosnel_Leyva-Cortes.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height:500px; max-width:1100px" src="/assets/img/headshots/Rosnel_Leyva-Cortes.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Rosnel Leyva-Cortes</h4>
                                 <p class="card-text">Chief Electrical Engineer</p>
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Steven.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height: 500px; max-width:1100px"src="/assets/img/headshots/Steven.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Steven Tian</h4>
                                 <p class="card-text">Chief Manufacturing Engineer</p>
@@ -192,7 +192,7 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Karime.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height: 500px; max-width:1100px" src="/assets/img/headshots/Karime.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Karime Meija</h4>
                                 <p class="card-text">Vehicle Dynamics Chief</p>
@@ -200,7 +200,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/JP.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height: 500px; max-width:1100px" src="/assets/img/headshots/JP.png">
                             <div class="card-body info">
                                 <h4 class="card-title">John Paul Salvatore</h4>
                                 <p class="card-text">Powertrain Chief</p>
@@ -208,7 +208,7 @@
                         </div>
                     </div> 
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Aileen.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height: 500px; max-width:1100px" src="/assets/img/headshots/Aileen.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Aileen Liu</h4>
                                 <p class="card-text">Controls Chief</p>
@@ -218,7 +218,7 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Hadley.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height: 500px; max-width:1100px" src="/assets/img/headshots/Hadley.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Hadley Pade</h4>
                                 <p class="card-text">High Voltage Chief</p>
@@ -226,7 +226,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Lizzie.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height: 500px; max-width:1100px"src="/assets/img/headshots/Lizzie.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Lizzie Scott</h4>
                                 <p class="card-text">Low Voltage Chief</p>
@@ -234,7 +234,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/William.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height: 500px; max-width:1100px" src="/assets/img/headshots/William.png">
                             <div class="card-body info">
                                 <h4 class="card-title">William Ostling</h4>
                                 <p class="card-text">Frame/Body/Aero Chief</p>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Nikaia.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height: 500px; max-width:1100px" src="/assets/img/headshots/Nikaia.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Nikaia He</h4>
                                 <p class="card-text">Electrical Engineering Treasurer</p>
@@ -255,7 +255,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/EVA.png">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height: 500px; max-width:1100px" src="/assets/img/headshots/EVA.png">
                             <div class="card-body info">
                                 <h4 class="card-title">Eva Sharman</h4>
                                 <p class="card-text">Mechanical Engineering Treasurer</p>
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Audrey_Ahn.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height: 500px; max-width:1100px" src="/assets/img/headshots/Audrey_Ahn.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Audrey Ahn</h4>
                                 <p class="card-text">Secretary</p>
@@ -271,7 +271,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Louise_Goldenberg.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" style="height: 500px; max-width:1100px" src="/assets/img/headshots/Louise_Goldenberg.jpg">
                             <div class="card-body info">
                                 <h4 class="card-title">Louise Goldenberg</h4>
                                 <p class="card-text">Social Chair</p>
